<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:background="@color/background_color">

            <com.app.securemessaging.util.BitVaultFont
                android:id="@+id/wallet_info_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ripple_back"
                android:padding="@dimen/left_padding"
                android:text="@string/character2"
                android:textColor="@color/white"
                android:textSize="@dimen/all_text_size" />

            <com.app.securemessaging.util.RobotoBold
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/delete_icon"
                android:layout_toRightOf="@+id/wallet_info_back"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18sp" />

            <com.app.securemessaging.util.BitVaultFont
                android:id="@+id/delete_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ripple_back"
                android:padding="@dimen/left_padding"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="@dimen/all_text_size" />

        </RelativeLayout>


    </LinearLayout>
</layout>